--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 kivy_app_with_server/bin
 kivy_app_with_server/.buildozer
-*/__pycache__/*
-__pycache__/*
+*/__pycache__
+__pycache__
+client/client
+.vscode
