made another small version of app to isolate the issue of the 30s disconnection, chatgpt is much better at handling smaller texts

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ kivy_app_with_server/bin
 kivy_app_with_server/.buildozer
 client/client
 client/client.dSYM
+connection_timeout_testing/bin
+connection_timeout_testing/.buildozer
+connection_timeout_testing/client
+connection_timeout_testing/client.dSYM
